--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'components/layouts/auth_layout.html.twig' %}
 
 {% block title %}Reset your password{% endblock %}
 
