--- a/templates/components/ticket_comments.html.twig
+++ b/templates/components/ticket_comments.html.twig
@@ -25,7 +25,7 @@
                     'modalId': 'deleteCommentModal' ~ comment.id,
                     'modalTitle': 'Confirm Deletion',
                     'modalMessage': 'Are you sure you want to delete this comment? This action cannot be undone.',
-                    'actionPath': path('user_delete_comment', { 'id': comment.id }),
+                    'actionPath': path(route_prefix ~ '_delete_comment', { 'id': comment.id }),
                     'confirmButtonText': 'Delete'
                 } %}
             {% else %}
