--- a/templates/components/topnav.html.twig
+++ b/templates/components/topnav.html.twig
@@ -1,22 +1,22 @@
-    <!-- top navigation -->
-        <div class="top_nav">
-          <div class="nav_menu">
-              <div class="nav toggle">
-                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-              </div>
-              <nav class="nav navbar-nav">
-              <ul class=" navbar-right">
-                <li class="nav-item dropdown open" style="padding-left: 15px;">
-                  <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                    <img src="/images/img.jpg" alt="">{{app.user.email}}
-                  </a>
-                  <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item"  href="javascript:;"> Profile</a>
+<!-- top navigation -->
+<div class="top_nav fixed-top">
+  <div class="nav_menu">
+      <div class="nav toggle">
+        <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+      </div>
+      <nav class="nav navbar-nav">
+      <ul class=" navbar-right">
+        <li class="nav-item dropdown open" style="padding-left: 15px;">
+          <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
+            <img src="/images/user.png" alt="">{{app.user.email}}
+          </a>
+          <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item"  href="{{ path('profile_view') }}"> Profile</a>
 
-                    <a class="dropdown-item"  href="{{path('app_logout')}}"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
-                  </div>
-                </li>
-              </ul>
-            </nav>
+            <a class="dropdown-item"  href="{{path('app_logout')}}"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
           </div>
-        </div>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
