--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'components/layouts/auth_layout.html.twig' %}
 
 {% block title %}Reset your password{% endblock %}
 
@@ -10,13 +10,20 @@
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
-        <div>
+        <div class="my-3">
             <small>
                 Enter your email address, and we will send you a
                 link to reset your password.
             </small>
         </div>
-
         <button class="btn btn-primary">Send password reset email</button>
     {{ form_end(requestForm) }}
+    <div class="clearfix"></div>
+
+        <div class="separator">
+        <p class="change_link">
+            Back to 
+            <a href="{{path('app_login')}}" class="to_register"> Log in </a>
+        </p>
+        </div>
 {% endblock %}
